# ddcutil-gtk

./: .gitignore  README.md  pyproject.toml  run.sh
.github/workflows/: release.yml
data/: org.ddcutil.gtk.desktop  org.ddcutil.gtk.policy
src/ddcutil_gtk/: __init__.py  ddcutil.py  main.py  monitor.py  privileged_helper.py  window.py
src/ddcutil_gtk/widgets/: __init__.py  monitor_panel.py  vcp_control.py
